--- a/package.json
+++ b/package.json
@@ -1,12 +1,23 @@
 {
-  "name" : "shoelace-ui-transition",
-  "version" : "0.0.1",
-  "description" : "`transition` transparent mixin",
-  "repository" : "https://github.com/shoelace-ui/transition.git",
-  "keywords" : ["stylus", "shoelace", "transition"],
-  "author" : "Michael Andrew Vanasse <mail@mndvns.com>",
-  "license" : "MIT",
+  "name": "shoelace-ui-transition",
+  "version": "0.1.0",
+  "description": "`transition` transparent mixin",
+  "author": "Michael Andrew Vanasse <mail@mndvns.com>",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/shoelace-ui/transition"
+  },
+  "homepage": "https://github.com/shoelace-ui/transition",
+  "keywords": [
+    "stylus",
+    "shoelace",
+    "transition"
+  ],
   "dependencies": {
-    "shoelace-ui-duration": "git+https://github.com/shoelace-ui/duration.git"
+    "shoelace-ui-duration": "^0.1.0"
+  },
+  "bugs": {
+    "url": "https://github.com/shoelace-ui/transition/issues"
   }
 }
